<resources>
    <string name="app_name">Solvit</string>
    <string name="tvBuilding">Building</string>
    <string name="tvDescription">An description</string>
    <string name="title_activity_navigation_drawer">NavigationDrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Ajustes</string>

    <string name="menu_pending">Pendientes</string>
    <string name="menu_completed">Completadas</string>
    <string name="menu_newnotification">Nueva Notificación</string>
    <string name="sign_out">Salir</string>
    <string name="menu_users">Usuarios</string>
    <string name="menu_profile">Mi Perfil</string>
    <string name="role">role</string>
    <string name="collectionIt">/events/it/it_events</string>
    <string name="collectionMaintenance">/events/maintenance/maintenance_events</string>
    <string name="collectionReception">/events/reception/reception_events</string>
    <string name="collectionUsers">/users</string>
</resources>